src/snapshots/siggy__ui__snapshot_tests__about_overlay.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ Alice ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777     ││[08:00] <Alice> Good morning! How's your day going?                         │
  • ##Family         ││    👍  1                                                                    │
  • Carol            ││● [08:05] <you> Just getting started, coffee in hand                        │
    ##Rust Devs      ││    ❤️  1                                                                    │
    Bob              ││[08:10] <Alice> Nice! I've been up since 6, went for a run                  │
▸   Alice            ││● [08:15] <you> Impressive. I can barely get out of bed before 7            │
    Dave             ││[08:20] <Alice> Ha! It gets easier once you build the habit                 │
                     ││● [08:25] <you> That's what everyone says...                                │
                     ││[0╭ About ─────────────────────────────────────────╮tomatic                 │
                     ││  │                                                │                        │
                     ││[0│  siggy v1.4.2                                  │t too                   │
                     ││✓ │                                                │                        │
                     ││[0│  A terminal Signal messenger client            │                        │
                     ││[0│                                                │/localmarket.example.com│
                     ││  │  Created by John Sideserf                      │                        │
                     ││  │  License: GPL-3.0                              │ry Saturday…            │
                     ││  │  github.com/johnsideserf/siggy                 │                        │
                     ││○ │                                                │                        │
                     ││✓ │  Press any key to close                        │owded.                  │
                     ││○ ╰────────────────────────────────────────────────╯                        │
                     ││○ [08:52] <Alice> I'll pick you up at 8:45                                  │
                     ││○ [08:55] <you> (edited) Actually make it 8:30, I want to browse early      │
                     ││[08:57] <Alice> Even better! See you Saturday                               │
                     ││    🎉  1                                                                    │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats
