src/snapshots/siggy__ui__snapshot_tests__empty_conversation.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ Empty ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777     ││                                                                            │
  • ##Family         ││                                                                            │
  • Carol            ││                                                                            │
    ##Rust Devs      ││                                                                            │
    Bob              ││                                                                            │
    Alice            ││                                                                            │
    Dave             ││                                                                            │
▸   Empty            ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Empty │ 8 chats
