src/snapshots/siggy__ui__snapshot_tests__narrow_terminal.snap
---
source: src/ui.rs
expression: output
---
╭ Alice ─────────────────────────────────────────╮
│https://localmarket.example.com                 ║
│  ├ Downtown Farmers Market                     ║
│  ├ Fresh produce, artisan goods, and live music║
│every Saturday…                                 ║
│  ╰ https://localmarket.example.com             ║
│○ [08:47] <you> Oh nice, what time should we go?║
│✓ [08:48] <Alice> Opens at 8, but 9 is fine.    ║
│Less crowded.                                   ║
│○ [08:50] <you> Perfect, let's do 9             █
│○ [08:52] <Alice> I'll pick you up at 8:45      █
│○ [08:55] <you> (edited) Actually make it 8:30, █
│I want to browse early                          █
│[08:57] <Alice> Even better! See you Saturday   █
│    🎉  1                                        █
╰────────────────────────────────────────────────╯
╭────────────────────────────────────────────────╮
│  Type a message...                             │
╰────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats │ [+]
